--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">健康秘钥</string>
+    <string name="app_name">健康密钥</string>
 
     <string name="loading">正在加载...</string>
 
