--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,6 @@
     <string name="pickerview_hours">时</string>
     <string name="pickerview_minutes">分</string>
     <string name="pickerview_seconds">秒</string>
+
+    <string name="sleep_time"><font color='#01d1b1'><big><big>%1$s</big></big></font>小时<font color='#01d1b1'><big><big>%2$s</big></big></font>分钟"</string>
 </resources>
