--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="pickerview_seconds">秒</string>
 
     <string name="sleep_time"><font color='#01d1b1'><big><big>%1$s</big></big></font>小时<font color='#01d1b1'><big><big>%2$s</big></big></font>分钟"</string>
+    <string name="privacy_agreement_hint">\t\t\t\t请您务必谨慎阅读、充分理解“服务协议”和“隐私政策“各条款，包括但不限于: 为了向你提供即时通讯，内容分享等服务，我们需要收集你的设备信息、操作日记等个人信息。你可以在“设置”中查看、变更、删除个人信息并管理你的授权。 你可阅读《服务协议》和《隐私政策》了解详细信息。如你同意，请点击“同意”开始接受我们的服务。</string>
 </resources>
